--- a/ansible/roles/isc_dhcp_server/handlers/main.yml
+++ b/ansible/roles/isc_dhcp_server/handlers/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: restart isc-dhcp-server
-  service: name="{{ isc_dhcp_server_service }}" state=restarted
+  service:
+    name="{{ isc_dhcp_server_service }}"
+    state=restarted
