--- a/ansible/roles/nginx/tasks/installation.yml
+++ b/ansible/roles/nginx/tasks/installation.yml
@@ -1,7 +1,11 @@
 ---
 - name: install nginx
-  package: name="{{ item }}" state=present
+  package:
+    name="{{ item }}"
+    state=present
   with_items: "{{ nginx_pkg }}"
 
 - name: enable nginx service
-  service: name=nginx enabled=yes
+  service:
+    name=nginx
+    enabled=yes
