--- a/ansible/roles/tftp/handlers/main.yml
+++ b/ansible/roles/tftp/handlers/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: restart tftp
-  service: name="{{ tftp_service }}" state=restarted
+  service:
+    name="{{ tftp_service }}"
+    state=restarted
