--- a/ansible/roles/foreman/tasks/repository.yml
+++ b/ansible/roles/foreman/tasks/repository.yml
@@ -1,38 +1,54 @@
 ---
 - name: configure foreman apt key
-  apt_key: url="{{ foreman_apt_main_key }}" state=present
+  apt_key:
+    url="{{ foreman_apt_main_key }}"
+    state=present
   when: ansible_os_family == "Debian" and foreman_apt_main_gpg
 
 - name: configure foreman apt repository
-  apt_repository: repo="deb {{ foreman_apt_main_baseurl }} {{ foreman_apt_main_os_version }} {{ foreman_apt_main_release }}"
+  apt_repository:
+    repo="deb {{ foreman_apt_main_baseurl }} {{ foreman_apt_main_os_version }} {{ foreman_apt_main_release }}"
     state=present
   when: ansible_os_family == "Debian"
 
 - name: configure foreman plugins apt key
-  apt_key: url="{{ foreman_apt_plugins_key }}" state=present
+  apt_key:
+    url="{{ foreman_apt_plugins_key }}"
+    state=present
   when: ansible_os_family == "Debian" and foreman_apt_plugins_gpg and foreman_plugins_repo
 
 - name: configure foreman plugins apt repository
-  apt_repository: repo="deb {{ foreman_apt_plugins_baseurl }} {{ foreman_apt_plugins_os_version }} {{ foreman_apt_plugins_release }}"
+  apt_repository:
+    repo="deb {{ foreman_apt_plugins_baseurl }} {{ foreman_apt_plugins_os_version }} {{ foreman_apt_plugins_release }}"
     state=present
   when: ansible_os_family == "Debian" and foreman_plugins_repo
 
 - name: configure foreman rpm key
-  rpm_key: key="{{ foreman_yum_main_key }}" state=present
+  rpm_key:
+    key="{{ foreman_yum_main_key }}"
+    state=present
   when: ansible_os_family == "RedHat" and foreman_yum_main_gpg
 
 - name: configure foreman yum repository
-  template: src=foreman.repo.j2 dest=/etc/yum.repos.d/foreman.repo
+  template:
+    src=foreman.repo.j2
+    dest=/etc/yum.repos.d/foreman.repo
   when: ansible_os_family == "RedHat"
 
 - name: configure foreman plugins rpm key
-  rpm_key: key="{{ foreman_yum_plugins_key }}" state=present
+  rpm_key:
+    key="{{ foreman_yum_plugins_key }}"
+    state=present
   when: ansible_os_family == "RedHat" and foreman_yum_plugins_gpg and foreman_plugins_repo
 
 - name: configure foreman plugins yum repository
-  template: src=foreman_plugins.repo.j2 dest=/etc/yum.repos.d/foreman_plugins.repo
+  template:
+    src=foreman_plugins.repo.j2
+    dest=/etc/yum.repos.d/foreman_plugins.repo
   when: ansible_os_family == "RedHat" and foreman_plugins_repo 
 
 - name: configure additional repositories
-  package: name="{{ item }}" state=present
+  package:
+    name="{{ item }}"
+    state=present
   with_items: "{{ foreman_extra_repos_pkg }}"
