--- a/ansible/roles/foreman_proxy/handlers/main.yml
+++ b/ansible/roles/foreman_proxy/handlers/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: restart foreman-proxy
-  service: name=foreman-proxy state=restarted
+  service:
+    name=foreman-proxy
+    state=restarted
