--- a/ansible/roles/foreman_proxy/tasks/installation.yml
+++ b/ansible/roles/foreman_proxy/tasks/installation.yml
@@ -1,7 +1,11 @@
 ---
 - name: install foreman-proxy
-  package: name="{{ item }}" state=present
+  package:
+    name="{{ item }}"
+    state=present
   with_items: "{{ foreman_proxy_pkg }}"
 
 - name: enable foreman-proxy service
-  service: name=foreman-proxy enabled=yes
+  service:
+    name=foreman-proxy
+    enabled=yes
