--- a/ansible/roles/isc_dhcp_server/tasks/installation.yml
+++ b/ansible/roles/isc_dhcp_server/tasks/installation.yml
@@ -1,7 +1,11 @@
 ---
 - name: install isc-dhcp-server
-  package: name="{{ item }}" state=present
+  package:
+    name="{{ item }}"
+    state=present
   with_items: "{{ isc_dhcp_server_pkg }}"
 
 - name: enable isc-dhcp-server service
-  service: name="{{ isc_dhcp_server_service }}" enabled=yes
+  service:
+    name="{{ isc_dhcp_server_service }}"
+    enabled=yes
