--- a/ansible/roles/mysql/tasks/installation.yml
+++ b/ansible/roles/mysql/tasks/installation.yml
@@ -1,11 +1,17 @@
 ---
 - name: install mysql
-  package: name="{{ item }}" state=present
+  package:
+    name="{{ item }}"
+    state=present
   with_items: "{{ mysql_pkg }}"
   register: mysql_installed
 
 - name: enable mysql service
-  service: name="{{ mysql_service }}" enabled=yes
+  service:
+    name="{{ mysql_service }}"
+    enabled=yes
 
 - name: start mysql service
-  service: name="{{ mysql_service }}" state=started
+  service:
+    name="{{ mysql_service }}"
+    state=started
