--- a/ansible/roles/nginx/tasks/configuration.yml
+++ b/ansible/roles/nginx/tasks/configuration.yml
@@ -1,19 +1,27 @@
 ---
 - name: template nginx.conf
-  template: src=nginx.conf.j2 dest=/etc/nginx/nginx.conf
+  template:
+    src=nginx.conf.j2
+    dest=/etc/nginx/nginx.conf
   notify:
     - restart nginx
 
 - name: remove nginx default.conf
-  file: path="{{ item }}" state=absent
+  file:
+    path="{{ item }}"
+    state=absent
   with_items: "{{ nginx_default_site }}"
   notify:
     - restart nginx
 
 - name: template nginx foreman.conf
-  template: src=foreman.conf.j2 dest="{{ nginx_cfg_dir }}/foreman.conf"
+  template:
+    src=foreman.conf.j2
+    dest="{{ nginx_cfg_dir }}/foreman.conf"
   notify:
     - restart nginx
 
 - name: restart nginx passenger
-  service: name=nginx state=restarted
+  service:
+    name=nginx
+    state=restarted
