--- a/ansible/roles/passenger_nginx/tasks/installation.yml
+++ b/ansible/roles/passenger_nginx/tasks/installation.yml
@@ -1,7 +1,11 @@
 ---
 - name: install passenger nginx
-  package: name="{{ item }}" state=present
+  package:
+    name="{{ item }}"
+    state=present
   with_items: "{{ passenger_nginx_pkg }}"
 
 - name: enable passenger nginx service
-  service: name=nginx enabled=yes
+  service:
+    name=nginx
+    enabled=yes
