--- a/ansible/roles/sqlite/tasks/main.yml
+++ b/ansible/roles/sqlite/tasks/main.yml
@@ -6,9 +6,14 @@
     - "{{ ansible_os_family }}.yml"
 
 - name: install sqlite
-  package: name="{{ item }}" state=present
+  package:
+    name="{{ item }}"
+    state=present
   with_items: "{{ sqlite_pkg }}"
 
 - name: create sqlite db directory
-  file: path="{{ sqlite_db_dir }}" mode=0755 state=directory
+  file:
+    path="{{ sqlite_db_dir }}"
+    mode=0755
+    state=directory
   when: sqlite_db_create_dir
