--- a/ansible/roles/foreman/vars/Debian.yml
+++ b/ansible/roles/foreman/vars/Debian.yml
@@ -7,3 +7,5 @@ foreman_db_mysql_adapter_pkg: foreman-mysql2
 foreman_db_pgsql_adapter_pkg: foreman-postgresql
 
 foreman_db_socket: /var/run/mysqld/mysqld.sock
+
+foreman_ldap_cert_dir: /usr/loca/share/ca-certificates
