--- a/ansible/roles/passenger_nginx/defaults/main.yml
+++ b/ansible/roles/passenger_nginx/defaults/main.yml
@@ -20,3 +20,9 @@ passenger_nginx_yum_sslverify: true
 passenger_nginx_yum_repo_gpgcheck: 0
 
 passenger_nginx_server_name: "{{ ansible_fqdn }}"
+
+passenger_nginx_ssl: true
+passenger_nginx_ssl_cert:
+passenger_nginx_ssl_cert_file: www_example_com.crt
+passenger_nginx_ssl_key:
+passenger_nginx_ssl_key_file: www_example_com.key
