--- a/ansible/roles/passenger_nginx/vars/RedHat.yml
+++ b/ansible/roles/passenger_nginx/vars/RedHat.yml
@@ -14,3 +14,5 @@ passenger_nginx_passenger_app_root: /usr/share/foreman/public
 
 passenger_nginx_passenger_user: foreman
 passenger_nginx_passenger_group: foreman
+
+passenger_nginx_ssl_cert_dir: /etc/pki/tls/private
