--- a/ansible/roles/passenger_nginx/vars/Ubuntu14.yml
+++ b/ansible/roles/passenger_nginx/vars/Ubuntu14.yml
@@ -16,3 +16,5 @@ passenger_nginx_passenger_app_root: /usr/share/foreman/public
 
 passenger_nginx_passenger_user: foreman
 passenger_nginx_passenger_group: foreman
+
+passenger_nginx_ssl_cert_dir: /etc/ssl/private
