Change '=' to ': ' in all Ansible tasks

--- a/ansible/roles/foreman/tasks/database.yml
+++ b/ansible/roles/foreman/tasks/database.yml
@@ -1,17 +1,17 @@
 ---
 - name: template foreman database.yml
   template:
-    src=database.yml.j2
-    dest=/etc/foreman/database.yml
-    backup=yes
+    src: database.yml.j2
+    dest: /etc/foreman/database.yml
+    backup: yes
 
 - name: set permissions for sqlite directory
   file:
-    path="{{ foreman_db_sqlite_dir }}"
-    owner=foreman
-    group=foreman
-    mode=0755
-    state=directory
+    path: "{{ foreman_db_sqlite_dir }}"
+    owner: foreman
+    group: foreman
+    mode: 0755
+    state: directory
   when: foreman_db_adapter == "sqlite3"
 
 - name: rake create foreman database
@@ -28,7 +28,7 @@
 
 - name: enable foreman service
   service:
-    name=foreman
-    enabled=yes
-    state=started
+    name: foreman
+    enabled: yes
+    state: started
   when: foreman_enable_service
