--- a/ansible/roles/nginx/tasks/installation.yml
+++ b/ansible/roles/nginx/tasks/installation.yml
@@ -1,11 +1,11 @@
 ---
 - name: install nginx
   package:
-    name="{{ item }}"
-    state=present
+    name: "{{ item }}"
+    state: present
   with_items: "{{ nginx_pkg }}"
 
 - name: enable nginx service
   service:
-    name=nginx
-    enabled=yes
+    name: nginx
+    enabled: yes
