--- a/ansible/roles/tftp/tasks/installation.yml
+++ b/ansible/roles/tftp/tasks/installation.yml
@@ -1,11 +1,11 @@
 ---
 - name: install tftp
   package:
-    name="{{ item }}"
-    state=present
+    name: "{{ item }}"
+    state: present
   with_items: "{{ tftp_pkg }}"
 
 - name: enable tftp service
   service:
-    name="{{ tftp_service }}"
-    enabled=yes
+    name: "{{ tftp_service }}"
+    enabled: yes
