--- a/ansible/roles/isc_dhcp_server/tasks/configuration.yml
+++ b/ansible/roles/isc_dhcp_server/tasks/configuration.yml
@@ -1,13 +1,13 @@
 ---
 - name: template isc-dhcp-server dhcpd.conf
   template:
-    src=dhcpd.conf.j2
-    dest=/etc/dhcp/dhcpd.conf
-    backup=yes
+    src: dhcpd.conf.j2
+    dest: /etc/dhcp/dhcpd.conf
+    backup: yes
   notify:
     - restart isc-dhcp-server
 
 - name: start isc-dhcp-server service
   service:
-    name="{{ isc_dhcp_server_service }}"
-    state=started
+    name: "{{ isc_dhcp_server_service }}"
+    state: started
