--- a/ansible/roles/isc_dhcp_server/tasks/installation.yml
+++ b/ansible/roles/isc_dhcp_server/tasks/installation.yml
@@ -1,11 +1,11 @@
 ---
 - name: install isc-dhcp-server
   package:
-    name="{{ item }}"
-    state=present
+    name: "{{ item }}"
+    state: present
   with_items: "{{ isc_dhcp_server_pkg }}"
 
 - name: enable isc-dhcp-server service
   service:
-    name="{{ isc_dhcp_server_service }}"
-    enabled=yes
+    name: "{{ isc_dhcp_server_service }}"
+    enabled: yes
