--- a/ansible/roles/mysql/tasks/installation.yml
+++ b/ansible/roles/mysql/tasks/installation.yml
@@ -1,17 +1,17 @@
 ---
 - name: install mysql
   package:
-    name="{{ item }}"
-    state=present
+    name: "{{ item }}"
+    state: present
   with_items: "{{ mysql_pkg }}"
   register: mysql_installed
 
 - name: enable mysql service
   service:
-    name="{{ mysql_service }}"
-    enabled=yes
+    name: "{{ mysql_service }}"
+    enabled: yes
 
 - name: start mysql service
   service:
-    name="{{ mysql_service }}"
-    state=started
+    name: "{{ mysql_service }}"
+    state: started
